# backend-python-v2

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  README2.md  alembic.ini  docker-compose.yml  export_swagger.py  pyproject.toml
alembic/: env.py
alembic/versions/: 858699fbac1a_create_tasks_table.py  c2868a3d454e_v1.py  d2e50401f4db_creating_table.py
app/: main.py  schemas.py
app/core/: config.py
app/models/: __init__.py  item.py  task.py
docs/: openapi.json  openapi.yaml
tests/: conftest.py  test_main.py
tests/integration/: test_integration.py  test_routes.py
tests/unit/: test_schemas.py
